--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -1,34 +1,37 @@
-\documentclass[a4paper]{article}
-\usepackage[utf8]{inputenc}
-\usepackage[a4paper]{geometry}
-\geometry{verbose, marginparwidth=15mm, marginparsep=3mm, tmargin=25mm}
-\usepackage{tabulary}
+\input{../latex_template}
+
 \usepackage{tabu}
-\usepackage{enumitem}
 \usepackage{rotating}
 \usepackage{diagbox}
-\usepackage{graphicx}
 \usepackage{float}
 \usepackage{multicol}
 \usepackage{rotating}
 \usepackage{url}
 
 \title{Redbackup: Projectplan}
-\author{
-		Fabian Hauser \\
-		Raphael Zimmermann
-}
+
 \date{\today}
 
 
 \begin{document}
+
+\frontmatter
+
 \maketitle
 
-\section{Project Overview}
+%----------------------------------------------------------------------------------------
+%	LIST OF CONTENTS PAGES
+%----------------------------------------------------------------------------------------
+
+\tableofcontents % Prints the main table of contents
+
+
+\mainmatter
+\chapter{Project Overview}
 The goal of the study project is to provide a theoretical description of an append-only, distributed peer-to-peer data storage as well as a working prototype as described in the problem statement \cite{problemstatement}.
 
 
-\section{Project Organization}
+\chapter{Project Organization}
 
 All team members have the same strategic rights and duties. Prof. Dr. Farhad Mehta is the project advisor and is therefore superior in the organization chart as visible in Figure \ref{fig:organigram}.
 
@@ -39,7 +42,7 @@ All team members have the same strategic rights and duties. Prof. Dr. Farhad Meh
 	\label{fig:organigram}
 \end{figure}
 
-\subsection{Roles}
+\section{Roles}
 
 Due to the small team size, most roles are performed by both team members.
 
@@ -48,8 +51,8 @@ Due to the small team size, most roles are performed by both team members.
 	\item[Fabian Hauser] infrastructure management, software engineering, quality assurance.
 \end{description}
 
-\section{Project Management}
-\subsection{Components}
+\chapter{Project Management}
+\section{Components}
 
 For a better overview and to allow us a sophisticated time assessment, we decided to group tasks into categories, i.e. JIRA components. Components represent processes, documents and products which are to be released.
 
@@ -67,18 +70,18 @@ Currently, tasks are separated into following components:
 	\end{itemize}
 \end{multicols}
 
-\subsection{Time Budget}
+\section{Time Budget}
 
 The project started with the Kickoff Meeting on 18.09.2017 and will be completed after 14 weeks by 22.12.2017.
 The two team members are available for 240 hours each during this period which corresponds to a weekly time budget of 17.15 hour per person.
 
 Apart from the statutory holidays, there are no further absences planned. Statutory holidays do not affect the weekly time budget.
 
-\subsection{Schedule}
+\section{Schedule}
 The project schedule is an iterative process based on elements of SCRUM. 
 
 Due to the explorative nature of the project, we decided on a sprint duration of one week.
-\subsubsection{Iterations \& Milestones}
+\subsection{Iterations \& Milestones}
 
 \begin{figure}[h!]
 	\centering
@@ -99,7 +102,7 @@ The goals and milestones resulting from each sprint are shown in Figure \ref{fig
 \end{figure}
 
 
-\subsubsection{Meetings}
+\subsection{Meetings}
 
 The team works every Tuesday (10:00 - 17:00) together in the study project room and every Monday (08:00 - 17:00) remotely. Both days begin with a daily stand-up meeting taking no longer than 15 minutes. Sprint planning meetings are carried out on Tuesday at 10:00. Table \ref{meeting-time-budget} shows an overview of the total meeting time budget.
 
@@ -122,17 +125,15 @@ Regular meetings with the project advisor take usually place on Friday in Prof. 
 
 Raphael Zimmermann will take meeting notes for every meeting. Meeting minutes are published on the project website afterwards.
 
-\section{Risk Management}
+\chapter{Risk Management}
 
 An assessment of the project-specific risks is carried out in Table \ref{tbl:project-risks} as time loss during the whole project. The risk matrix in Table \ref{tbl:risk-matrix} provides an overview of the risk weighting.
 
 To account for these risks, we reduce our weekly sprint time by the total weighted risk applicable to the planned task topics (on average approximately 20\%). We also review the risk assessment after every sprint, adapt it and take measures if necessary.
 
 
-\begin{table}
+\begin{table}[h]
 	\centering
-	\caption[Risk matrix]{The risk matrix. Numbers reference to the risk assessment Table \ref{tbl:project-risks}}
-	\label{tbl:risk-matrix}
 	\begin{tabu}{|l|c|c|c|}
 		\hline
 		\diagbox[width=9em,height=2.5em]{Probability}{Severity}
@@ -144,6 +145,8 @@ To account for these risks, we reduce our weekly sprint time by the total weight
 		Low ($\leq 30\%$)
 		  & & 4, 5, 7 & \\ \hline
 	\end{tabu}
+	\caption[Risk matrix]{The risk matrix. Numbers reference to the risk assessment Table \ref{tbl:project-risks}}
+	\label{tbl:risk-matrix}
 \end{table}
 
 
@@ -202,28 +205,28 @@ To account for these risks, we reduce our weekly sprint time by the total weight
 \end{sidewaystable}
 
 
-\section{Infrastructure}
+\chapter{Infrastructure}
 
 
-\subsection{Project Management and Development}
+\section{Project Management and Development}
 
 For project management, document/code storage and continuous integration/deployment we utilise the corresponding products by Atlassian (JIRA, BitBucket, Bamboo, Crowd)\cite{atlassian-opensource}.
 
 These applications are hosted on our HSR project server (\textit{sinv-56017.edu.hsr.ch}), which runs a standard Ubuntu Linux 17.04.
 
 
-\subsubsection{Development Tools}
+\subsection{Development Tools}
 
 Since most development tools depend on the chosen technology and might change in the future, they are maintained separately on the project website \footnote{\url{https://www.redbackup.org/development/}}.
 
-\subsection{Backup and Data Safety}
+\section{Backup and Data Safety}
 
 An incremental backup of the project server including the source code and documentation is created on an independent system (\textit{pin1262031.hsr.ch}) every night.
 
 As our documents and code is stored in a git repository, they are also distributed on all development systems.
 
 
-\section{Quality Measures}
+\chapter{Quality Measures}
 To maintain a high standard of quality, we take the following measures:
 
 \begin{multicols}{2}
@@ -237,19 +240,19 @@ To maintain a high standard of quality, we take the following measures:
 	\end{itemize}
 \end{multicols}
 
-\subsection{Documentation}
+\section{Documentation}
 The official documents such as the final submission document, the theoretical concept as well as this project plan are written in Latex and published on the project website \footnote{\url{https://www.redbackup.org}} as PDF documents. All other documents such as meeting minutes are written in Markdown and made available in HTML on the website as well.
 
 The sources are in both cases kept under version control in the same repository, which allows us to use the same tools and processes for documentation and code. The continuous integration server builds and publishes the website whenever new changes are pushed to the repository.
 
-\subsection{Project Management}
+\section{Project Management}
 Because the project plan allows for an iterative process, we use JIRA with its SCRUM-Features (such as sprint creation or boards) for project management.
 
-\subsubsection{Sprint Planning}
+\subsection{Sprint Planning}
 Each sprint is mapped to JIRA, which allows the project advisor to trace the project progress. Sprints are represented as boards on which the current state and assignee of any issue is easily visible ("To Do", "In Progress", "Review", "Done").
 
 
-\subsubsection{Definition of Done}
+\subsection{Definition of Done}
 An issue may be closed if \emph{all} of the following conditions are met:
 
 \begin{itemize}
@@ -265,21 +268,53 @@ An issue may be closed if \emph{all} of the following conditions are met:
 	\item All time is logged.
 \end{itemize}
 
-\subsection{Development}
+\section{Development}
 
 Since we are in a very early and agile stage we decided to use Github Flow\cite{github-flow}, a straightforward development workflow.
 
 Since the effective technology will be fixed later in the project, concrete coding guidelines, tools, metrics and an error policy will be defined when appropriate.
 
 
-\subsection{Testing}
+\section{Testing}
 All functionality must be automatically testable using continuous integration. Any non-trivial function/method must be verified with unit tests.
 
 Integration tests verify extended test scenarios.
 
 A minimal performance analysis will be carried out at the end of the project.
 
+
+
+\label{lastpage} %TODO: This label should be positioned below above the last paragraph
+
+%\cleardoublepage
+%----------------------------------------------------------------------------------------
+%	BIBLIOGRAPHY
+%----------------------------------------------------------------------------------------
+\backmatter
+\pagenumbering{Roman}
+
 \bibliographystyle{abbrv}
-\bibliography{refs}
+\bibliography{references}
+\addcontentsline{toc}{chapter}{Bibliography}
+
+
+%----------------------------------------------------------------------------------------
+%	LIST OF FIGURES/TABLES PAGES
+%----------------------------------------------------------------------------------------
+
+\listoffigures % Prints the list of figures
+
+\listoftables % Prints the list of tables
+
+%----------------------------------------------------------------------------------------
+%	ABBREVIATIONS
+%----------------------------------------------------------------------------------------
+
+\begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
+
+%\textbf{LAH} & \textbf{L}ist \textbf{A}bbreviations \textbf{H}ere\\
+%\textbf{WSF} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or\\
+
+\end{abbreviations}
 
 \end{document}
